# oscillatord

./: .checkpatch.conf  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  conanfile.txt  oscillatord.c  oscillatord.conf  version
.github/workflows/: build-oscillatord.yaml  build-oscillatord.yml  oscillatord-pull-request.yml  oscillatord-push.yml
common/: config.c  config.h  eeprom_config.c  eeprom_config.h  f9_defvalsets.c  f9_defvalsets.h  gnss-config.c  gnss-config.h  log.c  log.h  mRO50_ioctl.h  utils.c  utils.h
debian/: changelog  control  copyright  install  oscillatord-skyjacker.udev  oscillatord.conf  rules
example_configurations/: example_dummy.conf  example_mRO50.conf  example_rakon.conf  example_sa3x.conf  example_sim.conf  oscillatord.conf  oscillatord_default.conf
gnss_config/: art-ublox-default-configuration.txt  art-ublox-default-configuration_v220.txt  art-ublox-survey-config.txt
include/: compiler.h  config.h  eeprom_config.h  f9_defvalsets.h  gnss-config.h  gnss.h  log.h  mRO50_ioctl.h  ntpshm.h  odlog.h  os_compat.h  ppsthread.h  timespec.h  utils.h
misc/: example.conf  example_diamond.conf  example_rakon.conf  example_sim.conf
src/: CMakeLists.txt  config.c  config.h  f9_defvalsets.h  gnss.c  gnss.h  log.h  main.c  monitoring.c  monitoring.h  ntpshm.h  ntpshmread.c  ntpshmwrite.c  oscillator.c  oscillator.h  oscillator_factory.c  oscillator_factory.h  oscillatord.c  phasemeter.c  phasemeter.h  ppsthread.c  ppsthread.h  timehint.c  utils.c  utils.h
src/common/: config.c  eeprom_config.c  f9_defvalsets.c  gnss-config.c  log.c  odlog.c  utils.c
src/ntpshm/: ntpshm.h  ntpshmread.c  ntpshmwrite.c  ppsthread.c  ppsthread.h  timehint.c  timespec_str.c
src/oscillators/: dummy_oscillator.c  mRo50_oscillator.c  morion_oscillator.c  oscillator_mRO50_ioctl.h  rakon.c  rakon_oscillator.c  sa3x_oscillator.c  sa5x_oscillator.c  sim_oscillator.c  sim_oscillator.h
systemd/: CMakeLists.txt  oscillatord.service  oscillatord.service.in  oscillatord@.service  oscillatord@.service.in
tests/: .clang-format  CMakeLists.txt  art_integration_in_server_test.c  art_integration_test_suite.c  extts.c  extts.h  extts_test.c  mRo50.c  mRo50.h  monitoring_client.c  mro50_ctrl.c  mro_test_v2.c  oscillator_sim.c  ptspair.c  ptspair.h  test_minipod_structures.c
tests/art_integration_test_suite/: art_integration_test_suite.c  gnss_serial_test.h  phase_error_tracking_test.h  ptp_device_test.c  ptp_device_test.h
tests/art_integration_testsuite/: art_integration_test_suite.c  configurable_io_test.c  configurable_io_test.h  gnss_serial_test.c  gnss_serial_test.h  mro_device_test.c  mro_device_test.h  phase_error_tracking_test.c  phase_error_tracking_test.h  ptp_device_test.c  ptp_device_test.h
tests/lib_osc_sim_stubs/: CMakeLists.txt  time.c  time.h  tsync.c  tsync.h
tests/tsync_stub/: CMakeLists.txt  tsync.c  tsync.h
tests_debug/: CMakeLists.txt  gnss_start_stop_test.c  parse_test.c
tests_production/: CMakeLists.txt  gnss_config_prod.c  gnss_test_prod.c  io_test_prod.c  mro_test_prod.c  ocpdir_test_prod.c  phase_error_tracking_test_prod.c  ptp_test_prod.c  write_eeprom_prod.c
tests_production/utils/: extts.c
utils/: CMakeLists.txt  art_calibration.conf  art_disciplining_manager.c  art_eeprom_display.c  art_eeprom_files_updater.c  art_eeprom_format.c  art_eeprom_manager.c  art_eeprom_reformat.c  art_full_display.c  art_monitoring_client.c  art_temperature_table_manager.c  eeprom.c  eeprom.h  relative_temp_table.txt
